2011-11-14  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/plot2d.c (store2d_point): Fix for 4-column mode of
	BOXPLOT style which did not handle log scale correctly.

2011-11-14  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.h src/win/wgraph.c src/win/winmain.c
	src/win/wtext.c: Localisation support for menu and help files.
	Files are loaded according to current language settings from
	files named "wgnuplot-LL.mnu" and "wgnuplot-LL.chm", where LL is
	the abbreviation of the current language. Fall back to
	"wgnuplot.mnu" and "wgnuplot.chm" if localised files don't exist.
	Defaults may be overwritten by new entries "MenuFile" and
	"HelpFile" in wgnuplot.ini.
	Choose appropriate default fonts in Japanese environments.

	src/show.c (show_version) src/win/winmain.h: List correct names
	of menu and help files on Windows.

	src/win.trm (WIN_set_color): Immediately translate palette color
	values to RGB instead of passing them on. This makes it possible
	to use more than one palettes in multiplots and in different
	graph windows. Test e.g. with pm3dcolors.dem

	* src/win/wgraph.c src/win/wresourc.h src/win/wgnuplib.h: Add a
	separate switch to toggle antialiasing of polygons.

	* src/win/wgraph.c (Draw_XOR_Text): Implement a 10 year old FIXME:
	Use proper raster operation instead of double inversion.

2011-11-12  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/README.win-ja src/win/wgnuplot-ja.mnu: Update and sync
	with wgnuplot.mnu

2011-11-12  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/set.c (set_degreesign): Windows implementation using a Windows
	API call since iconv() does not understand locales as returned by
	setlocale().

	* src/command.c (help_command): HTML help window need to occlude
	the text window.

	* term/win.trm (WIN_filled_polygon): Use boxfill for filled polygons
	which are actually rectangles.

	* src/win/wgnuplib.h src/win/wgraph.c: Add support in windows terminal